--- a/index.html
+++ b/index.html
@@ -85,23 +85,23 @@
     <canvas id="canvas"></canvas>
     <div class="box">
         <!-- 图片部分 -->
-        <img class="img2" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1568641472&di=9dbacb75cf245d0eb57e757e0d2247f7&imgtype=jpg&er=1&src=http%3A%2F%2Fimg1.doubanio.com%2Fview%2Fphoto%2Fl%2Fpublic%2Fp2290059157.jpg" alt="">
+        <img class="img2" src="https://p0.ssl.qhimg.com/t0176dbf1bc5fb750d1.png" alt="">
         <div class="text">
             <h1>某某安全组</h1>
 
             <br>
 
-            <span style="color: #0f0">官方Q群：</span><span><a target="view_window" href="https://www.sansuib.com/">三岁半资源网</a></span>
+            <span style="color: #0f0"></span><span><a target="view_window" href="https://www.sansuib.com/"></a></span>
 <br><br>
 
             <p class="glow" style="color: #f00; font-size:21px;">友情检测，请及时修复</p>
-            <p class="glow" style="color: #f00; font-size:10px;">或联系本人修复</p>
+            <p class="glow" style="color: #f00; font-size:10px;"></p>
             <br>
-            <span style="color: #3ee5df">某某某Qq：</span><span><a  style="color: #e5743e;" target="view_window" href="http://wpa.qq.com/msgrd?v=3&uin=89171639&site=qq&menu=yes">三岁半资源网</a></span>
+            <span style="color: #3ee5df"></span><span><a  style="color: #e5743e;" target="view_window" href="http://wpa.qq.com/msgrd?v=3&uin=89171639&site=qq&menu=yes"></a></span>
             <br><br>
             <P class="glow">安全之路，永不妥协</P>
 <br><br><br><br>
-            <div class="yl"><span style="color: #f0f">友情链接：</span><span><a href="https://www.baidu.com/">某网站</a></span> <span><a href="https://www.baidu.com/">三岁半资源网</a></span><span><a href="https://www.sansuib.com/">某网站</a></span></div>
+            <div class="yl"><span style="color: #f0f"></span><span><a href="https://www.baidu.com/"></a></span> <span><a href="https://www.baidu.com/"></a></span><span><a href="https://www.sansuib.com/"></a></span></div>
 
         </div>
     </div>
