--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <!-- 图片部分 -->
         <img class="img2" src="https://p0.ssl.qhimg.com/t0176dbf1bc5fb750d1.png" alt="">
         <div class="text">
-            <h1>某某安全组</h1>
+            <h1>CyberDog is Coming...</h1>
 
             <br>
 
