--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ The apartment rent is predicted by apartment information published on the Intern
 		<p>Skewness value: it can be used to measure the asymmetry of probability distribution of random variables.</p>
 		<p>Kurtosis value: it can be used to measure the steepness of the probability distribution of random variables.</p>
 		<p>View the rent distribution curve and draw a curve distribution diagram and rent scatter diagram、</p>
-		<img src="1.png" />
+		<img src="https://pic.jitudisk.com/public/2022/12/08/2082b744e551e.png" />
 		<p>First, observe the rent data. It can be seen that this data is in line with the normal distribution, but the skewness value is too large. We found a big tail. The "rent" value distribution has obvious skewness, so we will correct it later.</p>
 		
 		<p>(2) View the data histogram of each property of the apartment</p>
